5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1646_2729.log
== TEST (2019-05-01 16:56:37) 
-- CODE:
a = int(input(""))
b = int(input(""))
if (a*b== %2):
	print(a+b)
else:
	print(b/a)
-- ERROR:
File "XXXX", line 3
    if (a*b== %2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:56:46) 
-- CODE:
a = int(input(""))
b = int(input(""))
if (a*b == %2):
	print(a+b)
else:
	print(b/a)
-- ERROR:
File "XXXX", line 3
    if (a*b == %2):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:56:54) 
-- CODE:
a = int(input(""))
b = int(input(""))
if (a*b == % 2):
	print(a+b)
else:
	print(b/a)
-- ERROR:
File "XXXX", line 3
    if (a*b == % 2):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:57:05) 
-- CODE:
a = int(input(""))
b = int(input(""))
if (a*b = % 2):
	print(a+b)
else:
	print(b/a)
-- ERROR:
File "XXXX", line 3
    if (a*b = % 2):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:57:26) 
-- CODE:
a = int(input(""))
b = int(input(""))
if (a * b = % 2):
	print(a+b)
else:
	print(b/a)
-- ERROR:
File "XXXX", line 3
    if (a * b = % 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:57:36) 
-- CODE:
a = int(input(""))
b = int(input(""))
if (a * b = %2):
	print(a+b)
else:
	print(b/a)
-- ERROR:
File "XXXX", line 3
    if (a * b = %2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:57:56) 
-- CODE:
a = int(input(""))
b = int(input(""))
if(a * b = %2):
	print(a+b)
else:
	print(b/a)
-- ERROR:
File "XXXX", line 3
    if(a * b = %2):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:58:18) 
-- CODE:
a = int(input(""))
b = int(input(""))
if (a * b):
	print(a+b)
else:
	print(b/a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:58:48) 
-- CODE:
a = int(input(""))
b = int(input(""))
if (a * b %2):
	print(a+b)
else:
	print(b/a)
-- OUTPUT:
1.1111111111111112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:59:10) 
-- CODE:
a = int(input(""))
b = int(input(""))
if (a * b %2):
	print(a+b)
else:
	print(b/a)
-- EXECUTION TIME:
0.16556
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1.1111111111111112
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:59:21) 
-- CODE:
a = int(input(""))
b = int(input(""))
if (a * b %2):
	print(a+b)
else:
	print(b/a)
-- OUTPUT:
1.1111111111111112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:00:07) 
-- CODE:
a = int(input(""))
b = int(input(""))
if (a*b)==(%2):
	print(a+b)
else:
	print(b/a)
-- ERROR:
File "XXXX", line 3
    if (a*b)==(%2):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:02:10) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b)%2 ==0):
	print(a+b)
else:
	print(b/a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:02:23) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b)%2 ==0):
	print(a+b)
else:
	print(b/a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:02:46) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b)%2 ==0):
	print(a+b)
else:
	print(b/a)
-- EXECUTION TIME:
0.201773
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
2.3333333333333335
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:02:54) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b)%2 ==0):
	print(a+b)
else:
	print(b/a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:03:43) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b)%2 == 0):
	print(a+b)
else:
	print(b/a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:04:14) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b)%2):
	print(a+b)
else:
	print(b/a)
-- OUTPUT:
1.1111111111111112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:04:24) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b)%2):
	print(a+b)
else:
	print(b/a)
-- EXECUTION TIME:
0.185623
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1.1111111111111112
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:04:46) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b) %2):
	print(a+b)
else:
	print(b/a)
-- OUTPUT:
1.1111111111111112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:05:36) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b) %2):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:05:56) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b) %2):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:06:05) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b) %2):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.219279
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:06:28) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b) %2):
	print(a+b)
else:
	print(b//a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:06:39) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b) %2):
	print(a+b)
else:
	print(b//a)
-- EXECUTION TIME:
0.19384
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:20:35) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b) %2):
	print(a+b)
else:
	print(b/a)
-- OUTPUT:
1.1111111111111112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:20:52) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b) %2):
	print(a+b)
else:
	print(b/a)
-- EXECUTION TIME:
0.124766
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1.1111111111111112
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:20:57) 
-- CODE:
a = int(input(""))
b = int(input(""))
if ((a*b) %2):
	print(a+b)
else:
	print(b/a)
-- OUTPUT:
1.1111111111111112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
